client:two ceph-fuse client, one can not list out files created by another.

the problem happend after mds restored the stale client session,
right after one normal client created files under one specific
dir,while the restored client can not list out the just created
files.

Fixes: http://tracker.ceph.com/issues/27051

Signed-off-by: Peng Xie <peng.hse@xtaotech.com>